--- a/prototype/static/style.css
+++ b/prototype/static/style.css
@@ -2,31 +2,28 @@ body {
   font-family: sans-serif;
 }
 
-.container {
-  width: 95%;
-  margin: 2em auto;
-  display: grid;
-  grid-template-columns: repeat(18, 5.4%);
-  grid-gap: 1px;
-}
-
+.container,
 .container-lanthinides {
   width: 95%;
   margin: 2em auto;
   display: grid;
   grid-template-columns: repeat(18, 5.4%);
-  grid-gap: 1px;
+  grid-gap: 0;
 }
 
 .element {
   border: 1px solid #ccc;
-  height: 5em;
+  height: 4.4em;
   text-align: center;
   position: relative;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   align-content: center;
+}
+
+.title {
+  margin-top: 1em;
 }
 
 h1,
@@ -57,7 +54,7 @@ h2 {
 }
 
 .diatomic-nonmetal {
-  background: rgb(50, 167, 157);
+  background: rgba(70, 170, 71, 0.82);
 }
 
 .transition-metal {
@@ -65,15 +62,15 @@ h2 {
 }
 
 .metalloid {
- background: rgb(89, 89, 89);
+ background: rgba(132, 143, 164, 0.9);
 }
 
 .noble-gas {
- background: rgb(182, 250, 244)
+ background: rgba(160, 186, 184, 0.71);
 }
 
 .post-transition-metal {
-  background: rgb(105, 105, 105);
+  background: rgba(131, 119, 105, 0.77);
 }
 
 .polyatomic-nonmetal {
@@ -85,13 +82,13 @@ h2 {
 }
 
 .alkaline-earth-metal {
-  background: rgb(224, 201, 210);
+  background: rgba(182, 158, 168, 0.79);
 }
 
 .actinide {
-  background: rgba(196, 217, 66, 0.8);
+  background: rgba(215, 209, 122, 0.71);
 }
 
 .lanthanide {
-  background: rgb(104, 203, 224);
+  background: rgba(66, 147, 199, 0.79);
 }
