--- a/prototype/static/style.css
+++ b/prototype/static/style.css
@@ -22,12 +22,44 @@ body {
   align-content: center;
 }
 
+.element-details {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+  z-index: 10; /* Sit on top */
+}
+
+.element-details-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 30px;
+  border: 2px solid #888;
+  width: 50%; /* Could be more or less, depending on screen size */
+  border-radius: 10px;
+  position: relative;
+  z-index: 10; /* Sit on top */
+
+}
+
 .title {
   margin-top: 1em;
 }
 
+a {
+  text-decoration: none;
+  font-style: normal;
+  color: inherit;
+}
+
 h1,
-h2 {
+h2,
+h3 {
   margin: 0;
   text-align: center;
 }
