--- a/prototype/static/style.css
+++ b/prototype/static/style.css
@@ -66,12 +66,6 @@ body {
   margin-top: 1em;
 }
 
-a {
-  text-decoration: none;
-  font-style: normal;
-  color: inherit;
-}
-
 h1,
 h2 {
   margin: 0;
@@ -112,6 +106,11 @@ dt {
   margin-top: 1em;
 }
 
+dd.category-colors,
+dt.category-colors  {
+  margin: 0;
+}
+
 .element-number {
   font-size: .6em;
   position: absolute;
@@ -128,6 +127,21 @@ dt {
   font-size: .7em;
   align-self: flex-end;
   padding-bottom: .3em;
+}
+
+span.transition-metal,
+span.diatomic-nonmetal,
+span.metalloid,
+span.noble-gas,
+span.post-transition-metal,
+span.polyatomic-nonmetal,
+span.alkali-metal,
+span.alkaline-earth-metal,
+span.actinide,
+span.lanthanide {
+  display: inline-block;
+  width: 5em;
+  height: 1em;
 }
 
 .diatomic-nonmetal {
