add link to images of elements

--- a/prototype/templates/index.html
+++ b/prototype/templates/index.html
@@ -81,7 +81,8 @@
                <dt>Melting point</dt> <dd>{{data[element]["melt"]}}&thinsp;K</dd>
                <dt>Boiling point</dt> <dd>{{data[element]["boil"]}}&thinsp;K</dd>
                <dt>Density</dt> <dd>{{data[element]["density"]}}&thinsp;g/cm<sup>3</sup></dd>
-                <dt>Read more at: </dt> <dd><a href='{{data[element]["source"]}}' target="_blank">Wikipedia</a></dd>
+               <dt>Read more at: </dt> <dd><a href='{{data[element]["source"]}}' target="_blank">Wikipedia</a></dd>
+               <dt>Images: </dt>  <dd><a href='http://images-of-elements.com/{{data[element]["name"]|lower}}.php#a' target="_blank">here</a></dd>
             </dl>
            </div>
           </div>
@@ -104,6 +105,8 @@
                   <dt>Melting point</dt> <dd>{{data[element]["melt"]}}&thinsp;K</dd>
                   <dt>Boiling point</dt> <dd>{{data[element]["boil"]}}&thinsp;K</dd>
                   <dt>Density</dt> <dd>{{data[element]["density"]}}&thinsp;g/cm<sup>3</sup></dd>
+                  <dt>Read more at: </dt> <dd><a href='{{data[element]["source"]}}' target="_blank">Wikipedia</a></dd>
+                  <dt>Images: </dt>  <dd><a href='http://images-of-elements.com/{{data[element]["name"]|lower}}.php#a' target="_blank">here</a></dd>
                </dl>
            </div>
           </div>
