--- a/prototype/templates/index.html
+++ b/prototype/templates/index.html
@@ -82,7 +82,8 @@
                <dt>Boiling point</dt> <dd>{{data[element]["boil"]}}&thinsp;K</dd>
                <dt>Density</dt> <dd>{{data[element]["density"]}}&thinsp;g/cm<sup>3</sup></dd>
                <dt>Read more at: </dt> <dd><a href='{{data[element]["source"]}}' target="_blank">Wikipedia</a></dd>
-               <dt>Images: </dt>  <dd><a href='http://images-of-elements.com/{{data[element]["name"]|lower}}.php#a' target="_blank">here</a></dd>
+               <dt>Image </dt>  <dd><img alt="element-image" class="element-image" src='http://images-of-elements.com/s/{{data[element]["name"]|lower}}.jpg' onerror="this.src='static/fallback-img.png'; this.classList.remove('element-image')" /></dd>
+               <dt>More images and info: </dt>  <dd><a href='http://images-of-elements.com/{{data[element]["name"]|lower}}.php#a' target="_blank">here</a></dd>
             </dl>
            </div>
           </div>
@@ -106,7 +107,8 @@
                   <dt>Boiling point</dt> <dd>{{data[element]["boil"]}}&thinsp;K</dd>
                   <dt>Density</dt> <dd>{{data[element]["density"]}}&thinsp;g/cm<sup>3</sup></dd>
                   <dt>Read more at: </dt> <dd><a href='{{data[element]["source"]}}' target="_blank">Wikipedia</a></dd>
-                  <dt>Images: </dt>  <dd><a href='http://images-of-elements.com/{{data[element]["name"]|lower}}.php#a' target="_blank">here</a></dd>
+                  <dt>Image </dt>  <dd><img alt="element-image" class="element-image" src='http://images-of-elements.coms/s/{{data[element]["name"]|lower}}.jpg' onerror="this.src='static/fallback-img.png'; this.classList.remove('element-image') " /></dd>
+                  <dt>More images and info: </dt>  <dd><a href='http://images-of-elements.com/{{data[element]["name"]|lower}}.php#a' target="_blank">here</a></dd>
                </dl>
            </div>
           </div>
