--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,7 @@ body {
 .container,
 .container-lanthinides {
   width: 95%;
+  max-width: 1000px;
   margin: 2em auto;
   display: grid;
   grid-template-columns: repeat(18, 5.4%);
