--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,9 @@
      <meta charset="UTF-8">
      <title>Periodic Table of Elements</title>
      <meta name="description" content="periodic-table-prototype">
-    <link rel="stylesheet" href="static/style.css">
-    <script src="static/script.js" type="text/javascript"></script>
+     <link rel="stylesheet" href="static/style.css">
+     <script src="static/script.js" type="text/javascript"></script>
+     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
      <!--[if lt IE 9]>
        <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
      <![endif]-->
