some styling, move screenshot to proper place

--- a/static/style.css
+++ b/static/style.css
@@ -131,8 +131,8 @@ dt {
 .category-colors-legend {
   position: absolute;
   width: 17%;
-  top: 4em;
-  left: 20em;
+  top: 7%;
+  left: 20%;
 }
 
 dd.category-colors,
